# minimal_rosbot

./: .cursorrules  .gitignore  .gitmodules  ARCHITECTURE.md  NAV_and_EXPLOR_logic.md  README.md  TODO
src/minidog_cmd_mux/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/minidog_cmd_mux/launch/: mux.launch.py
src/minidog_cmd_mux/minidog_cmd_mux/: cmd_vel_mux.py
src/minidog_explore/: package.xml  setup.cfg  setup.py
src/minidog_explore/launch/: explore.launch.py
src/minidog_explore/minidog_explore/: frontier_explore.py
src/minidog_sim/: CMakeLists.txt  package.xml
src/minidog_sim/config/: bridge.yaml  fastdds_no_shm.xml  laser_scan_matcher.yaml  nav2_slam.yaml  slam_toolbox_async.yaml
src/minidog_sim/launch/: bridge.launch.py  bringup.launch.py  laser_scan_matcher.launch.py  nav2.launch.py  rviz.launch.py  scan_odom.launch.py  sim.launch.py  slam.launch.py  web.launch.py
src/minidog_sim/models/minidog/: model.sdf
src/minidog_sim/rviz/: robot.rviz
src/minidog_sim/urdf/: robot.urdf.xacro
src/minidog_sim/webapp/: app.py  requirements.txt
src/minidog_sim/worlds/: minidog_world.sdf
src/minimal_4wheel_ackermann_sim/: CMakeLists.txt  package.xml
src/minimal_4wheel_ackermann_sim/config/: bridge.yaml
src/minimal_4wheel_ackermann_sim/launch/: bridge.launch.py  bringup.launch.py  rviz.launch.py  sim.launch.py
src/minimal_4wheel_ackermann_sim/rviz/: robot.rviz
src/minimal_4wheel_ackermann_sim/urdf/: robot.urdf.xacro
src/minimal_4wheel_ackermann_sim/worlds/: minimal_4wheel_world.sdf
