<?xml version="1.0"?>
<package format="3">
  <name>minidog_cmd_mux</name>
  <version>0.0.1</version>
  <description>Minimal cmd_vel multiplexer: manual by default, optional autonomous command when enabled.</description>
  <maintainer email="jjon@todo.todo">jjon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


