<?xml version="1.0"?>
<package format="3">
  <name>minidog_sim</name>
  <version>0.0.1</version>
  <description>Minimal Gazebo Fortress (Ignition Gazebo) + ROS 2 Humble Ackermann robot simulation driven by /cmd_vel and visualized in RViz.</description>

  <maintainer email="jjon@todo.todo">jjon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>minidog_cmd_mux</exec_depend>
  <exec_depend>minidog_explore</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


